# juridico-mcp-server

./: .gitignore  README.md  mcp_autoconfig.py  pyproject.toml  setup-mcp.py
data/: run-http.sh
docs/superpowers/plans/: 2026-06-19-rt-jurisprudencia.md
docs/superpowers/specs/: 2026-06-19-rt-jurisprudencia-juridico-mcp-design.md
src/juridico_mcp/: __main__.py  cdp_common.py  server.py  shared.py  vault_common.py
src/juridico_mcp/clients/: bnp.py  cjf.py  stj.py  tjdft.py
src/juridico_mcp/jusbrasil/: __init__.py  inteiro_teor.py  jurisprudencia.py  session.py  vault.py
src/juridico_mcp/rt/: __init__.py  auth.py  captura_md.py  cdp_session.py  delivery.py  jurisprudencia.py  session.py  vault.py
tests/: test_cdp_common.py  test_cjf.py  test_jusbrasil_inteiro_teor.py  test_jusbrasil_jurisprudencia.py  test_jusbrasil_session.py  test_jusbrasil_vault.py  test_rt_captura.py  test_rt_cdp_session.py  test_rt_delivery.py  test_rt_jurisprudencia.py  test_rt_session.py  test_rt_vault.py  test_server_jusbrasil.py  test_server_jusbrasil_inteiro_teor.py  test_server_rt.py  test_shared.py  test_stj.py  test_vault_common.py
tests/fixtures/: rt_juris_doc.html  rt_juris_resultados.html
