[project]
name = "juridico-mcp-server"
version = "1.0.0"
description = "MCP server para jurisprudencia brasileira: CJF, STJ, BNP (precedentes) e TJDFT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.0.0",
    "nodriver>=0.38",
]

[project.scripts]
juridico-mcp = "juridico_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/juridico_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
