[project]
name = "juridico-mcp-server"
version = "1.0.0"
description = "MCP server para jurisprudencia brasileira: CJF, STJ, BNP (precedentes) e TJDFT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.0.0",
    "nodriver>=0.38",
    "cdp-scaffold[html,mcp]",
    "markdownify>=0.11.6",
    "lxml>=5.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.uv.sources]
cdp-scaffold = { path = "../cdp-scaffold", editable = true }

[project.scripts]
juridico-mcp = "juridico_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/juridico_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
